--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,5 +3,10 @@ dependencies {
         exclude group: "com.google.guava", module: "guava"
     }
 
-    compileOnly "org.jetbrains:annotations:21.0.1"
+    implementation "com.zaxxer:HikariCP:3.4.5"
+    implementation "co.aikar:idb-core:1.0.0-SNAPSHOT"
+    implementation "mysql:mysql-connector-java:8.0.22"
+    implementation "com.github.robinbraemer:cloudflareapi:1.4.0"
+
+    compileOnly "com.google.code.gson:gson:2.8.7"
 }
