made a papi expansion

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include(
         "core",
         "bukkit",
         "bungee",
+        "papi",
         ":sample:bukkit-plugin",
         ":sample:bungee-plugin"
 )
