started writing a readme & uncommented key logic in login listeners ready for prod release

--- a/build.gradle
+++ b/build.gradle
@@ -25,4 +25,11 @@ allprojects {
     dependencies {
         compileOnly "org.jetbrains:annotations:21.0.1"
     }
+
+    javadoc.options.addStringOption("Xdoclint:none", "-quiet")
+
+    java {
+        withSourcesJar()
+        withJavadocJar()
+    }
 }
