Think it's finished now :D

--- a/bungee/build.gradle
+++ b/bungee/build.gradle
@@ -5,6 +5,8 @@ repositories {
 }
 
 dependencies {
-    api project(":core")
+    api(project(":core")) {
+        exclude group: "org.apache.commons", module: "commons-lang3"
+    }
     compileOnly 'net.md-5:bungeecord-api:1.17-R0.1-SNAPSHOT'
 }
