--- a/sample/bukkit-plugin/build.gradle
+++ b/sample/bukkit-plugin/build.gradle
@@ -1,7 +1,13 @@
 apply from: "https://cdn.piggypiglet.me/gradle/spigot.gradle"
 
+repositories {
+    maven {
+        url = 'https://repo.piggypiglet.me/releases'
+    }
+}
+
 dependencies {
-    implementation project(":bukkit")
+    implementation "me.piggypiglet:referrals-bukkit:1.0.0"
     spigot "1.17-R0.1"
 }
 
@@ -10,7 +16,6 @@ shadowJar {
 
     relocate "co.aikar.idb", "me.piggypiglet.sample.deps.co.aikar.idb"
     relocate "com.google.inject", "me.piggypiglet.sample.deps.com.google.inject"
-    relocate "com.mysql", "me.piggypiglet.sample.deps.com.mysql"
     relocate "com.zaxxer.hikari", "me.piggypiglet.sample.deps.com.zaxxer.hikari"
     relocate "eu.roboflax.cloudflare", "me.piggypiglet.sample.deps.eu.roboflax.cloudflare"
     relocate "io.joshworks.restclient", "me.piggypiglet.sample.deps.io.joshworks.restclient"
